fixed spacing between components and wysiwyg editor

--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,26 @@
 body {
+  background-color: #1f2232;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .app {
   text-align: center;
   width: 100%;
   height: 100vh;
+  background-color: #1f2232;
+}
+
+.logo {
+  max-width: 100%;
+  max-height: 100%;
+  width: 50px;
+  height: 50px;
 }
 
 .app-header {
   position: absolute;
-  background-color: #282c34;
   height: 5vh;
   width: 100%;
   display: flex;
@@ -22,13 +30,26 @@ body {
   font-size: calc(5px + 2vmin);
   color: white;
   text-align: center;
-  padding: 12px;
+}
+
+.header-content {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.header-content img {
+  margin-right: 10px;
+}
+
+.header-content span {
+  font-size: calc(5px + 2vmin);
+  color: white;
 }
 
 .app-container {
   display: flex;
-  width: 100%;
-  height: 100vh;
 }
 
 .app-container > div {
@@ -38,14 +59,13 @@ body {
 }
 
 .sidebar {
+  margin-top: 5vh;
   width: 20vh;
-  height: 100vh;
   float: left;
-  background-color: #282c34;
-  border: 1px solid #111;
 }
 
 .editor-container {
+  margin-top: 5vh;
   flex-grow: 1;
-  background-color: coral;
+  background-color: #ffbf44;
 }
